<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.ui.fragment.AuthorizationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/AppTextH0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/authorization"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailField"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:textColor="?attr/appTextPrimary"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingVertical="@dimen/size_4dp"
                android:textColor="?attr/appTextPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:textColor="?attr/appTextPrimary"
            app:endIconMode="password_toggle"

            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/size_4dp"
                android:textColor="?attr/appTextPrimary"
                android:textSize="@dimen/text_size_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/AppTextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/forgot_password"
            android:textColor="?attr/appAccentColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/AppButtonStyle"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/size_16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/firstTime"
            style="@style/AppTextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size_16dp"
            android:text="@string/first_time_in_app" />

        <TextView
            android:id="@+id/createAccount"
            style="@style/AppTextH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4dp"
            android:layout_marginBottom="@dimen/size_16dp"
            android:text="@string/create_account"
            android:textColor="@color/accented" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>