<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.ui.fragment.NewPassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/AppTextH0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_password"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_24" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordField"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/size_4dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatPasswordField"
            style="@style/RoundedTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPasswordText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_48dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingVertical="@dimen/size_4dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm_buttonButton"
            style="@style/AppButtonStyle"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:enabled="false"
            android:text="@string/confirm"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/size_16dp" />

        <TextView
            android:id="@+id/backButton"
            style="@style/AppTextButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_48dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center"
            android:text="@string/return_to_auth"
            android:textColor="?attr/appAccentColor"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>