<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSettings"
        style="@style/Toolbar"
        app:title="@string/settings"
        app:titleTextAppearance="@style/AppTextH1"
        app:navigationIcon="@drawable/ic_arrows_back"
        android:contentDescription="@string/settings_toolbar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swReminder"
        style="@style/SwitchApp"
        app:switchPadding="@dimen/size_64dp"
        android:text="@string/reminders"
        android:layout_marginTop="@dimen/size_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbSettings"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTimeRemind"
        style="@style/AppTextPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="20:00"
        android:textColor="?appTextSecondary"
        android:layout_marginEnd="@dimen/size_76dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/swReminder"
        app:layout_constraintBottom_toBottomOf="@id/swReminder"
        app:layout_constraintEnd_toEndOf="@id/swReminder" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/swTheme"
        style="@style/SwitchApp"
        app:switchPadding="@dimen/size_64dp"
        android:text="@string/theme"
        android:layout_marginTop="@dimen/size_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swReminder"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivLightThemeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/theme"
        android:src="@drawable/ic_theme_light"
        android:visibility="visible"
        android:layout_marginEnd="@dimen/size_76dp"
        app:layout_constraintTop_toTopOf="@id/swTheme"
        app:layout_constraintBottom_toBottomOf="@id/swTheme"
        app:layout_constraintEnd_toEndOf="@id/swTheme"/>

    <ImageView
        android:id="@+id/ivDarkThemeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/theme"
        android:src="@drawable/ic_theme_dark"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/size_76dp"
        app:layout_constraintTop_toTopOf="@id/swTheme"
        app:layout_constraintBottom_toBottomOf="@id/swTheme"
        app:layout_constraintEnd_toEndOf="@id/swTheme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:gravity="center_vertical|start"
        app:cornerRadius="@dimen/size_12dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="?attr/appCardBackground"
        android:text="@string/export"
        android:textAppearance="@style/AppTextPrimary"
        android:textColor="?attr/appTextPrimary"
        app:rippleColor="?attr/appTextPrimary"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swTheme"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:gravity="center_vertical|start"
        app:cornerRadius="@dimen/size_12dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="?attr/appCardBackground"
        android:text="@string/logout"
        android:textAppearance="@style/AppTextPrimary"
        android:textColor="?attr/appErrorColor"
        app:rippleColor="?attr/appTextPrimary"
        android:layout_marginTop="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnExport"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>