<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".expenses.ui.fragment.SelectCategoryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbSelectCategory"
        style="@style/Toolbar"
        app:title="@string/select_category"
        app:titleTextColor="?attr/appTextPrimary"
        app:titleTextAppearance="@style/AppTextH1"
        app:navigationIcon="@drawable/ic_arrows_back"
        android:contentDescription="@string/settings_toolbar_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etSearchCategory"
        style="@style/AppTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48dp"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_56dp"
        android:background="@drawable/card_background_selector"
        android:hint="@string/search"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbSelectCategory"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_search"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_12dp"
        android:layout_marginBottom="@dimen/size_12dp"
        app:layout_constraintTop_toTopOf="@id/etSearchCategory"
        app:layout_constraintBottom_toBottomOf="@id/etSearchCategory"
        app:layout_constraintEnd_toEndOf="@id/etSearchCategory"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/btnNewCategory"
        style="@style/AppTextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/size_16dp"
        android:paddingEnd="@dimen/size_16dp"
        android:paddingTop="@dimen/size_8dp"
        android:paddingBottom="@dimen/size_8dp"
        android:gravity="center_vertical"
        android:background="@drawable/card_background_selector"
        android:textColor="?attr/appTextPrimary"
        android:text="@string/btn_new_category"
        android:drawablePadding="@dimen/size_8dp"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_16dp"
        app:drawableStartCompat="@drawable/add_category_icon"
        app:layout_constraintTop_toBottomOf="@id/etSearchCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvPlaceholderHeaderCategoryList"
        app:layout_constraintTag="ph_header"
        style="@style/AppTextH2"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_list_placeholder_header"
        android:maxLines="1"
        android:textColor="?attr/appTextPrimary"
        app:layout_constrainedWidth="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNewCategory"
        app:layout_constraintBottom_toTopOf="@id/tvPlaceholderTextCategoryList"/>

    <TextView
        android:id="@+id/tvPlaceholderTextCategoryList"
        app:layout_constraintTag="ph_text"
        style="@style/AppTextPrimary"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_list_placeholder_text"
        android:maxLines="3"
        android:textColor="?attr/appTextPrimary"
        app:layout_constrainedWidth="true"
        android:layout_marginTop="@dimen/size_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPlaceholderHeaderCategoryList"
        app:layout_constraintBottom_toTopOf="@id/btnCategoryApply"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoryList"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_category_list"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_12dp"
        android:layout_marginTop="@dimen/size_4dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnNewCategory"
        app:layout_constraintBottom_toTopOf="@id/btnCategoryApply"/>

    <TextView
        android:id="@+id/btnCategoryApply"
        style="@style/AppTextH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_12dp"
        android:paddingBottom="@dimen/size_12dp"
        android:gravity="center"
        android:background="@drawable/btn_background_selector"
        android:text="@string/btn_apply"
        android:textColor="@color/button_text"
        android:enabled="true"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_12dp"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grPlaceholderCategoryList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_tags="ph_header, ph_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>